--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="post">
-            <h1>Titulo</h1>
+            <h1>Nombre del programador: Manuel Santiago Chaparro Rojas</h1>
             <p>Parrafo inicial</p>
         </div>
     </div>
