--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            <h1>cabecera</h1>
+        </div>
         <div id="post">
             <h1>Nombre del programador: Manuel Santiago Chaparro Rojas</h1>
             <p>Parrafo inicial</p>
