Agregado el parrafo secundario del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Nombre del programador: Manuel Santiago Chaparro Rojas</h1>
             <p>Parrafo inicial</p>
+            <p>Parrafo secundario</p>
         </div>
     </div>
 </body>
