Modifique la cabecera y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <h1>cabecera</h1>
+            <h1>Blog de cabecera</h1>
         </div>
         <div id="post">
             <h1>Nombre del programador: Manuel Santiago Chaparro Rojas</h1>
