Cambie a cabecera, el color y un parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,12 +10,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <h1>cabecera</h1>
+            <h1>Blog del master</h1>
         </div>
         <div id="post">
             <h1>Nombre del programador: Manuel Santiago Chaparro Rojas</h1>
             <p>Parrafo inicial</p>
             <p>Parrafo secundario</p>
+            <p>suscribete y dale like</p>
         </div>
     </div>
 </body>
