--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <h1>Titulo</h1>
             <h1>Blog del master</h1>
         </div>
         <div id="post">
