Mejora en la posicion de la imagen del poyo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <h1>Titulo</h1>
-            <h1>Blog del master</h1>
+            <img class="poyito" src="img/poyo.png" alt="">
+            <h1>Blog del poyo</h1>
         </div>
         <div id="post">
             <h1>Nombre del programador: Manuel Santiago Chaparro Rojas</h1>
