Creacion del footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,5 +20,10 @@
             <p>suscribete y dale like</p>
         </div>
     </div>
+
+
+    <footer>
+        <h2>Este es el footer</h2>
+    </footer>
 </body>
 </html>
