Cambio en las tildes de parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,8 +15,8 @@
         </div>
         <div id="post">
             <h1>Nombre del programador: Manuel Santiago Chaparro Rojas</h1>
-            <p>Parrafo inicial</p>
-            <p>Parrafo secundario</p>
+            <p>Párrafo inicial</p>
+            <p>Párrafo secundario</p>
             <p>suscribete y dale like</p>
         </div>
     </div>
