Agregue una nueva imagen en formato png

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,8 @@
         </div>
         <div id="post">
             <h1>Nombre del programador: Manuel Santiago Chaparro Rojas</h1>
-            <p>Párrafo inicial</p>
+            <p>Imagen del equipo a continuacion</p>
+            <img src="img/team.png" alt="equipo" style="width: 50%; height: 50%;">
             <p>Párrafo secundario</p>
             <p>suscribete y dale like</p>
         </div>
